# centerdevice-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.asciidoc  README.md
.ci/: azure-pipelines.yml
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: collections.rs  delete.rs  download.rs  download_with_progress.rs  get_tokens.rs  get_tokens_root_ca.rs  old_search.rs  refresh_access_token.rs  search.rs  upload.rs  users.rs
src/: client.rs  errors.rs  lib.rs  old_client.rs  utils.rs
src/client/: auth.rs  collections.rs  delete.rs  download.rs  search.rs  upload.rs  users.rs
src/net/: oauth.rs
src/old/: client.rs  mod.rs  utils.rs
src/old/net/: http.rs  mod.rs  oauth.rs
