[package]
name = "centerdevice"
version = "0.3.6"
authors = ["Lukas Pustina <lukas.pustina@centerdevice.de>"]
description = "Rust API Client for CenterDevice"
repository = "https://github.com/centerdevice/centerdevice-rs.git"
readme = "README.md"
license = "MIT"
keywords = ["centerdevice", "api"]
categories = ["api-bindings"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"

[badges]
circle-ci = { repository = "centerdevice/centerdevice-rs", branch = "master" }

[lib]
name = "centerdevice"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
failure = "0.1"
hex = "0.3"
hyper = "0.10"
log = "0.4"
mime = "0.2"
mime_guess = "1.8"
mime_multipart = "0.5"
ring = "0.14"
reqwest = { version = "^0.9", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "^0.6"
spectral = "^0.6"

